[project]
name = "hatchet-sdk"
version = "1.33.3"
description = "This is the official Python SDK for Hatchet, a distributed, fault-tolerant task queue. The SDK allows you to easily integrate Hatchet's task scheduling and workflow orchestration capabilities into your Python applications."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4"

authors = [
    { name = "Alexander Belanger", email = "alexander@hatchet.run" },
    { name = "Matt Kaye", email = "matt@hatchet.run" },
    { name = "Gabe Ruttner", email = "gabe@hatchet.run" },
    { name = "Mohammed Nafees", email = "nafees@hatchet.run" },
]

dependencies = [
    "grpcio>=1.76.0,<2",
    "grpcio-tools>=1.76.0,<2",
    "protobuf>=6.33.5,<7",
    "pydantic>=2.13.3,<3",
    "python-dateutil>=2.9.0.post0,<3",
    "aiohttp>=3.13.5,<4",
    "tenacity>=8.4.1",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.14.0,<3",
    "typing-inspection>=0.1.0",
    "urllib3>=2.6.3,<3",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.28.0,<2",
    "opentelemetry-sdk>=1.28.0,<2",
    "opentelemetry-instrumentation>=0.49b0",
    "opentelemetry-distro>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0,<2",
]

lint = [
    "mypy==1.20.0",
    "types-protobuf>=5.28.3.20241030",
    "black==26.3.1",
    "click>=8.3.3",
    "types-psutil>=7.2.2.20260408",
    "ruff==0.15.10",
    "types-requests>=2.33.0.20260503",
    "psutil>=6.0.0",
    "types-grpcio>=1.0.0",
]

test = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.1.5",
    "pytest-retry>=1.7.0",
    "psycopg[pool]>=3.2.6,<4",
    "pytest-xdist>=3.7.0",
    "requests>=2.33.0,<3",
]

docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocstrings[python]>=0.29.1,<2",
    "pydoclint>=0.6.6",
    "markdownify>=1.1.0",
    "openai>=2.32.0,<3",
    "bs4>=0.0.2",
    "types-beautifulsoup4>=4.12.0.20250204",
    "fastapi>=0.136.1,<1",
    "uvicorn>=0.46.0,<1",
]

claude = ["claude-agent-sdk", "mcp"]
openai = ["openai-agents"]

[project.entry-points."mkdocs.plugins"]
"markdown-export" = "docs.generator.markdown_export:MarkdownExportPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hatchet_sdk"]

[tool.hatch.build]
include = ["hatchet_sdk/py.typed"]


[tool.pytest.ini_options]
log_cli = true
env = ["HATCHET_CLIENT_WORKER_HEALTHCHECK_ENABLED=True"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.black]
extend_exclude = "(hatchet_sdk/contracts/|hatchet_sdk/v0/contracts/|site)"

[tool.poetry]

[tool.mypy]
files = ["."]
exclude = [
    "hatchet_sdk/clients/rest/api/*",
    "hatchet_sdk/clients/rest/models/*",
    "hatchet_sdk/contracts",
    "hatchet_sdk/clients/rest/api_client.py",
    "hatchet_sdk/clients/rest/configuration.py",
    "hatchet_sdk/clients/rest/exceptions.py",
    "hatchet_sdk/clients/rest/rest.py",
    "hatchet_sdk/v0/*",
    "site/*",
    "examples/dependency_injection/dependency_annotations312.py",
]
strict = true
enable_error_code = [
    "possibly-undefined",
    "truthy-bool",
    "redundant-expr",
    "truthy-iterable",
]

[tool.ruff]
target-version = "py310"
exclude = [
    "hatchet_sdk/clients/rest/api/*",
    "hatchet_sdk/clients/rest/models/*",
    "hatchet_sdk/contracts",
    "hatchet_sdk/clients/rest/api_client.py",
    "hatchet_sdk/clients/rest/configuration.py",
    "hatchet_sdk/clients/rest/exceptions.py",
    "hatchet_sdk/clients/rest/rest.py",
    "hatchet_sdk/v0/*",
    "site/*",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "ASYNC",
    "B",
    "SIM",
    "C4",
    "PIE",
    "RET",
    "ARG",
    "G",
    "RUF",
    "DTZ",
    "FIX",
    "PERF",
    "T201",
]
ignore = ["E501", "N806", "B008", "ARG001", "ARG002", "RET503", "FIX", "RET506"]
exclude = [
    "examples/*",
    "docs/*",
    "hatchet_sdk/clients/rest/api/*",
    "hatchet_sdk/clients/rest/models/*",
    "hatchet_sdk/contracts",
    "hatchet_sdk/clients/rest/api_client.py",
    "hatchet_sdk/clients/rest/configuration.py",
    "hatchet_sdk/clients/rest/exceptions.py",
    "hatchet_sdk/clients/rest/rest.py",
    "hatchet_sdk/v0/*",
    "apply_patches.py",
    "site/*",
    "tests/*",
]

[tool.pydoclint]
style = "sphinx"
exclude = "v0|clients/rest/*|contracts/*|.venv|site/*|examples/dependency_injection/dependency_annotations312.py"
arg-type-hints-in-docstring = false
check-return-types = false
