[tool.poetry]
name = "hatchet-python-quickstart"
version = "0.1.0"
description = "Simple Setup to Run Hatchet Workflows"
authors = ["gabriel ruttner <gabe@hatchet.run>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
hatchet-sdk = "1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simple = "src.run:main"
worker = "src.worker:main"
