[tool.poetry]
name = "hatchet-guides-python"
version = "0.0.0"
description = "Hatchet guide examples (Python) - docs snippets with integration deps"
authors = ["Hatchet <team@hatchet.run>"]

[tool.poetry.dependencies]
python = "^3.10"
hatchet-sdk = { path = "../../python", develop = true }
pydantic = "^2.0.0"
# LLM integrations
openai = "^1.0.0"
anthropic = "^0.39.0"
groq = "^0.9.0"
ollama = "^0.3.0"
# Embedding integrations
cohere = "^5.0.0"
# OCR integrations
pytesseract = "^0.3.10"
Pillow = "^10.0.0"
reductoai = "^0.16.0"
# Unstructured excluded - heavy deps (onnx) may not install on all platforms
# Scraper integrations
playwright = "^1.49.0"
firecrawl-py = "^0.0.16"
browserbase = "^1.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"
mypy = "==1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["."]
explicit_package_bases = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
enable_error_code = ["possibly-undefined", "truthy-bool", "redundant-expr", "truthy-iterable"]

[tool.ruff]
target-version = "py310"
exclude = ["integrations/ocr_unstructured.py"]  # needs unstructured (heavy deps)
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # line length - doc examples can be long
